--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   ],
   "devDependencies": {
     "mocha": "*",
-    "chai": "*"
+    "chai": "*",
+    "big.js": "*"
   },
   "author": "Tomás Fox <tomas.c.fox@gmail.com>",
   "license": "MIT"
