--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mocha": "*",
     "chai": "*",
     "sinon": "*",
-    "big.js": "*"
+    "big.js": "*",
+    "bigjs-neg": "*"
   },
   "author": "Tomás Fox <tomas.c.fox@gmail.com>",
   "license": "MIT"
