--- a/.jshintrc
+++ b/.jshintrc
@@ -1,3 +1,13 @@
 {
-  "indent": 2
+  "curly": true,
+  "eqeqeq": true,
+  "freeze": true,
+  "indent": 2,
+  "maxdepth": 5,
+  "newcap": true,
+  "noarg": true,
+  "undef": true,
+  "unused": true,
+
+  "node": true
 }
