Add keyword to package.json

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "interpolation",
     "numerical",
     "analysis",
-    "newton"
+    "newton",
+    "polynomial"
   ],
   "devDependencies": {
     "mocha": "*",
