Change package.json description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "na-hermite-interpolation",
   "version": "0.0.1",
-  "description": "Hermite interpolation",
+  "description": "Generates hermite polynomials",
   "main": "./na-hermite-interpolation",
   "scripts": {
     "test": "mocha"
