--- a/.jscsrc
+++ b/.jscsrc
@@ -1,5 +1,6 @@
 {
   "preset": "google",
   "disallowMultipleLineBreaks": null,
-  "disallowMultipleVarDecl": null
+  "disallowMultipleVarDecl": null,
+  "maximumLineLength": 100
 }
